[package]
name = "tile-game-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = ">=0.15.0", features = ["serde"] } 
mktemp = ">=0.4.1"
memmap = ">=0.7.0"
bincode = ">=1.3.3"
serde = { version = "<=2.0", features = ["derive"] } 
rayon = "<2.0"

[lib]
name="tile_game"
src="lib.rs"
